Hit and miss works

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div class="bottom-container">
             <div class="captain-turn">Captain's Turn</div>
             <div class="start">Start Game</div>
+            <div class="retreat">Retreat</div>
             <div class="alien-turn">Alien's Turn</div>
             
                   </div>
