--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="right-container">
            
-                <p class="type">Alien: <span> 1</span></p>
+                <p class="type">Alien: <span class="alienNo"> 1</span></p>
                 <div class="img-container ">
                     <img class="img-style" id="alien-img" src="https://tse2.mm.bing.net/th?id=OIP.wDKmYdyYLJ-0XIZ_4k6NtgHaHa&pid=15.1" alt="alien-img" />
                   </div>
