--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="outer-container">
       <div class="top-container">
         <div class="left-container">
-          <p class="type">Captain</p>
+          <p class="type">USS Assembly</p>
           <div class="img-container">
             <img class="img-style" id="captain-img " src="https://i.giphy.com/gEwrCXUgVijde.gif" alt="captain-img" />
           </div>
