code works, need to check game over sound and aliens left

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                   </div>
                   <div class="fire-container">
-                    <p class="aliens-left">Aliens Left : <span> </span></p>
+                    <!-- <p class="aliens-left" style="width: 200px; border: 1px solid white;">Aliens Left <span class="al-span"> </span> </p> -->
         
                   </div>
                   <div  id="alien-bottom-row" class="bottom-row">
@@ -51,6 +51,7 @@
         </div>
         <div class="bottom-container">
             <div id="c-won" class="captain-turn btn-styles big-sz dnone"> Captain Won</div>
+            <audio id="won-sound" src="/sound/achievement-video-game-type-1-230515.mp3"></audio>
             <div class="start btn-styles ">Start Game</div>
             <div class="retreat btn-styles dnone">Retreat</div>
             <div id="a-won"  class="alien-turn btn-styles big-sz dnone">Alien Won</div>
